--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bimap = "0.6.3"
 eframe = "0.22.0"
 egui = "0.22.0"
 itertools = "0.11.0"
+lazy_static = "1.4.0"
 nom = "7.1.3"
 rand = "0.8.5"
 thiserror = "1.0.40"
