--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 bimap = "0.6.3"
 eframe = "0.22.0"
 itertools = "0.11.0"
+more-asserts = "0.3.1"
 nom = "7.1.3"
 rand = "0.8.5"
 thiserror = "1.0.40"
